@@ -5,6 +5,7 @@
 === 0.5.1 ===
 * Updated code to match lltl library headers.
 * Better integration with system::follow_url() routine.
+* Added automatic style creation from XML schema.
 - Add custom mouse pointer for fraction actions.
 
 === 0.5.0 ===
